// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render when totaling 0 items 1`] = `
<div>
  <h1>
    Viewing 
    0
     expense
    s
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render when totaling 1 items 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $1.95
  </h1>
</div>
`;

exports[`should render when totaling 3 items 1`] = `
<div>
  <h1>
    Viewing 
    3
     expense
    s
     totalling 
    $57.90
  </h1>
</div>
`;
